Login/Register UI

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Floating keyboard */
+@keyframes float {
+  0%, 100% { transform: translateY(0px);}
+  50% {transform: translateY(-20px);}
+}
